Replace spans with links

--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,7 @@
     </header>
     <main class="main">
       <section class="info">
-        <h1>Now buy your PIN or <span>top up</span><br> with bank transfer</h1>
+        <h1>Now buy your PIN or <a href="#">top up</a><br> with bank transfer</h1>
         <p>We Make international calling simple, relible, and cheap basedon your unique calling behavior.</p>
       </section>
       <button class="button main__button">Get Started</button>
@@ -133,7 +133,7 @@
           </li>
           <li></li>
         </ul>
-        <p>45k+ Regular User. <span>View Price Plan</span></p>
+        <p>45k+ Regular User. <a href="#">View Price Plan</a></p>
       </div>
     </main>
   </div>
